--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @inproceedings{cao2025dare,
   title={DARE: Diffusion Policy for Autonomous Robot Exploration},
   author={Cao, Yuhong and Lew, Jeric and Liang, Jingsong and Cheng, Jin and Sartoretti, Guillaume},
-  booktitle={Submission to IEEE International Conference on Robotics and Automation (ICRA)},
+  booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
   year={2025},
   pdf={https://arxiv.org/html/2410.16687v1},
   bibtex_show={true},
