--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
   year={2025},
   pdf={https://arxiv.org/html/2410.16687v1},
+  code={https://github.com/marmotlab/DARE},
   bibtex_show={true},
   selected={true}
 }
@@ -40,6 +41,7 @@
   year={2024},
   pdf={https://arxiv.org/abs/2407.20203},
   code={https://github.com/marmotlab/IR2-Multi-Robot-RL-Exploration},
+  website={https://ir2-explore.github.io/},
   bibtex_show={true},
   selected={true}
 }
