--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,22 @@
 ---
 ---
+@inproceedings{wang2025corl,
+  title={CogniPlan: Uncertainty-Guided Path Planning with Conditional Generative Layout Prediction},
+  author={Wang, Yizhuo and He, Haodong and Liang, Jingsong and Cao, Yuhong and Chakraborty, Ritabrata and Sartoretti, Guillaume},
+  booktitle={Conference on Robot Learning (CoRL)},
+  year={2025},
+  bibtex_show={true},
+  selected={true}
+}
+
+@inproceedings{cheng2025corl,
+  title={Multimodal Fused Learning for Solving the Generalized Traveling Salesman Problem in Robotic Task Planning},
+  author={Cheng, Jiaqi and Fan, Mingfeng and Zhang, Xuefeng and Liang, Jingsong and Cao, Yuhong and Wu, Guohua and Sartoretti, Guillaume},
+  booktitle={Conference on Robot Learning (CoRL)},
+  year={2025},
+  bibtex_show={true},
+  selected={true}
+}
 
 @inproceedings{cao2025dare,
   title={DARE: Diffusion Policy for Autonomous Robot Exploration},
