--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
   author={Wang, Yizhuo and He, Haodong and Liang, Jingsong and Cao, Yuhong and Chakraborty, Ritabrata and Sartoretti, Guillaume},
   booktitle={Conference on Robot Learning (CoRL)},
   year={2025},
+  website={https://yizhuo-wang.com/cogniplan/},
   bibtex_show={true},
   selected={true}
 }
