--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,8 @@
   author={Wang, Yizhuo and He, Haodong and Liang, Jingsong and Cao, Yuhong and Chakraborty, Ritabrata and Sartoretti, Guillaume},
   booktitle={Conference on Robot Learning (CoRL)},
   year={2025},
+  pdf={https://arxiv.org/pdf/2508.03027},
+  code={https://github.com/marmotlab/CogniPlan},
   website={https://yizhuo-wang.com/cogniplan/},
   bibtex_show={true},
   selected={true}
