--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,7 @@
   author={Cheng, Jiaqi and Fan, Mingfeng and Zhang, Xuefeng and Liang, Jingsong and Cao, Yuhong and Wu, Guohua and Sartoretti, Guillaume},
   booktitle={Conference on Robot Learning (CoRL)},
   year={2025},
+  pdf={https://arxiv.org/pdf/2506.16931},
   bibtex_show={true},
   selected={true}
 }
