Customize homepage layout

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,50 @@
 ---
 ---
+@inproceedings{zhang2026orion,
+  title={ORION: Option-Regularized Deep Reinforcement Learning for Cooperative Multi-Agent Online Navigation},
+  author={Zhang*, Shizhe and Liang*, Jingsong and Zhou, Zhitao and Ye, Shuhan and Wang, Yizhuo and Tan, Derek and Chiun, Jimmy and Cao, Yuhong and Sartoretti, Guillaume},
+  booktitle={In Submission},
+  year={2026},
+  pdf={https://arxiv.org/abs/2601.01155},
+  code={https://github.com/marmotlab/ORION-multi-agent-navigation},
+  bibtex_show={true},
+  selected={true},
+  preview={orion_ros.gif}
+}
+
+@inproceedings{header2025cao,
+  title={HEADER: Hierarchical Robot Exploration via Attention-Based Deep Reinforcement Learning with Expert-Guided Reward},
+  author={Cao, Yuhong and Wang, Yizhuo and Liang, Jingsong and Liao, Shuhao and Zhang, Yifeng and Li, Peizhuo and Sartoretti, Guillaume},
+  booktitle={In Submission},
+  year={2025},
+  additional_info={<span style="color: rgb(215,20,64);">Best Paper Award, Active Perception Workshop, IROS 2025</span>},
+  pdf={https://arxiv.org/abs/2510.15679},
+  bibtex_show={true},
+  selected={true},
+  preview={header.gif}
+}
+
+@inproceedings{ni2025grate,
+  title={GRATE: a Graph transformer-based deep Reinforcement learning Approach for Time-efficient autonomous robot Exploration},
+  author={Ni, Haozhan and Liang, Jingsong and He, Chenyu and Cao, Yuhong and Sartoretti, Guillaume},
+  booktitle={In Submission},
+  year={2025},
+  pdf={https://arxiv.org/abs/2509.12863},
+  bibtex_show={true},
+  preview={grate.png}
+}
+
 @inproceedings{wang2025corl,
   title={CogniPlan: Uncertainty-Guided Path Planning with Conditional Generative Layout Prediction},
   author={Wang, Yizhuo and He, Haodong and Liang, Jingsong and Cao, Yuhong and Chakraborty, Ritabrata and Sartoretti, Guillaume},
   booktitle={Conference on Robot Learning (CoRL)},
   year={2025},
-  pdf={https://arxiv.org/pdf/2508.03027},
+  pdf={https://arxiv.org/abs/2508.03027},
   code={https://github.com/marmotlab/CogniPlan},
   website={https://yizhuo-wang.com/cogniplan/},
   bibtex_show={true},
-  selected={true}
+  selected={true},
+  preview={cogniplan_preview.webp}
 }
 
 @inproceedings{cheng2025corl,
@@ -17,9 +52,9 @@
   author={Cheng, Jiaqi and Fan, Mingfeng and Zhang, Xuefeng and Liang, Jingsong and Cao, Yuhong and Wu, Guohua and Sartoretti, Guillaume},
   booktitle={Conference on Robot Learning (CoRL)},
   year={2025},
-  pdf={https://arxiv.org/pdf/2506.16931},
+  pdf={https://arxiv.org/abs/2506.16931},
   bibtex_show={true},
-  selected={true}
+  preview={mmfl.webp}
 }
 
 @inproceedings{cao2025dare,
@@ -30,7 +65,8 @@
   pdf={https://arxiv.org/html/2410.16687v1},
   code={https://github.com/marmotlab/DARE},
   bibtex_show={true},
-  selected={true}
+  selected={true},
+  preview={dare.webp}
 }
 
 @inproceedings{liang2024hd,
@@ -41,7 +77,8 @@
   pdf={https://ieeexplore.ieee.org/abstract/document/10767278},
   code={https://github.com/marmotlab/HDPlanner_Exp_and_Nav},
   bibtex_show={true},
-  selected={true}
+  selected={true},
+  preview={hdplanner.webp}
 }
 
 @inproceedings{ma2024dars,
@@ -49,10 +86,11 @@
   author={Ma, Yixiao and Liang, Jingsong and Cao, Yuhong and Tan, Derek and Sartoretti, Guillaume},
   booktitle={International Symposium on Distributed Autonomous Robotic Systems (DARS)},
   year={2024},
+  additional_info={<span style="color: rgb(27,117,188);">Oral Presentation</span>},
   pdf={https://arxiv.org/abs/2407.20203},
   code={https://github.com/marmotlab/Bandwidth-Limited-Multi-Robot-Exploration},
   bibtex_show={true},
-  selected={true}
+  preview={dars.gif}
 }
 
 @inproceedings{derek2024ir2,
@@ -60,11 +98,14 @@
   author={Tan, Derek and Ma, Yixiao and Liang, Jingsong and Chng, YiCheng and Cao, Yuhong and Sartoretti, Guillaume},
   booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   year={2024},
+  additional_info={<span style="color: rgb(27,117,188);">Oral Presentation</span>},
+  pdf={https://arxiv.org/abs/2510.15679},
   pdf={https://arxiv.org/abs/2407.20203},
   code={https://github.com/marmotlab/IR2-Multi-Robot-RL-Exploration},
   website={https://ir2-explore.github.io/},
   bibtex_show={true},
-  selected={true}
+  selected={true},
+  preview={ir2.gif}
 }
 
 @inproceedings{liang2023context,
@@ -75,5 +116,6 @@
   pdf={https://proceedings.mlr.press/v229/liang23a},
   code={https://github.com/marmotlab/Context_Aware_Navigation},
   bibtex_show={true},
-  selected={true}
+  selected={true},
+  preview={corl23.png}
 }
