--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,17 @@
 ---
 ---
+@inproceedings{liao2026fare,
+  title={FARE: Fast-Slow Agentic Robotic Exploration},
+  author={Liao, Shuhao and Lv, Xuxin and Lew, Jeric and Zhang, Shizhe and Liang, Jingsong and Li, Peizhuo and Cao, Yuhong and Wu, Wenjun and Sartoretti, Guillaume},
+  booktitle={In Submission},
+  year={2026},
+  pdf={https://arxiv.org/abs/2601.01155},
+  code={https://github.com/marmotlab/ORION-multi-agent-navigation},
+  bibtex_show={true},
+  selected={true},
+  preview={fare.png}
+}
+
 @inproceedings{zhang2026orion,
   title={ORION: Option-Regularized Deep Reinforcement Learning for Cooperative Multi-Agent Online Navigation},
   author={Zhang*, Shizhe and Liang*, Jingsong and Zhou, Zhitao and Ye, Shuhan and Wang, Yizhuo and Tan, Derek and Chiun, Jimmy and Cao, Yuhong and Sartoretti, Guillaume},
