--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,5 @@
 ---
 ---
-@inproceedings{liao2026fare,
-  title={FARE: Fast-Slow Agentic Robotic Exploration},
-  author={Liao, Shuhao and Lv, Xuxin and Lew, Jeric and Zhang, Shizhe and Liang, Jingsong and Li, Peizhuo and Cao, Yuhong and Wu, Wenjun and Sartoretti, Guillaume},
-  booktitle={In Submission},
-  year={2026},
-  pdf={https://arxiv.org/abs/2601.14681},
-  bibtex_show={true},
-  preview={fare.png}
-}
 
 @inproceedings{zhang2026orion,
   title={ORION: Option-Regularized Deep Reinforcement Learning for Cooperative Multi-Agent Online Navigation},
@@ -22,6 +13,28 @@
   preview={orion_ros.gif}
 }
 
+@inproceedings{ni2025grate,
+  title={GRATE: a Graph transformer-based deep Reinforcement learning Approach for Time-efficient autonomous robot Exploration},
+  author={Ni, Haozhan and Liang, Jingsong and He, Chenyu and Cao, Yuhong and Sartoretti, Guillaume},
+  booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+  year={2026},
+  pdf={https://arxiv.org/abs/2509.12863},
+  bibtex_show={true},
+  selected={true},
+  preview={grate.png}
+}
+
+@inproceedings{liao2026fare,
+  title={FARE: Fast-Slow Agentic Robotic Exploration},
+  author={Liao, Shuhao and Lv, Xuxin and Lew, Jeric and Zhang, Shizhe and Liang, Jingsong and Li, Peizhuo and Cao, Yuhong and Wu, Wenjun and Sartoretti, Guillaume},
+  booktitle={In Submission},
+  year={2026},
+  pdf={https://arxiv.org/abs/2601.14681},
+  bibtex_show={true},
+  selected={true},
+  preview={fare.png}
+}
+
 @inproceedings{header2025cao,
   title={HEADER: Hierarchical Robot Exploration via Attention-Based Deep Reinforcement Learning with Expert-Guided Reward},
   author={Cao, Yuhong and Wang, Yizhuo and Liang, Jingsong and Liao, Shuhao and Zhang, Yifeng and Li, Peizhuo and Sartoretti, Guillaume},
@@ -32,16 +45,6 @@
   bibtex_show={true},
   selected={true},
   preview={header.gif}
-}
-
-@inproceedings{ni2025grate,
-  title={GRATE: a Graph transformer-based deep Reinforcement learning Approach for Time-efficient autonomous robot Exploration},
-  author={Ni, Haozhan and Liang, Jingsong and He, Chenyu and Cao, Yuhong and Sartoretti, Guillaume},
-  booktitle={In Submission},
-  year={2025},
-  pdf={https://arxiv.org/abs/2509.12863},
-  bibtex_show={true},
-  preview={grate.png}
 }
 
 @inproceedings{wang2025corl,
